--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -9,6 +9,7 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
+
   width: 500px;
 }
 
@@ -17,20 +18,41 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
   grid-auto-rows: minmax(100px, auto);
+  row-gap: 20px;
+  width: 100%;
 }
 
 .show {
-  display: flex;
-  background-color: pink;
-  flex-direction: column;
+  width: 100%;
+  max-height: 100%;
 }
 
 .showImage {
-  width: 150px;
-  height: 200px;
-  object-fit: contain;
+  width: 100%;
+}
+
+.imageContainer {
+  margin-bottom: 10px;
+  position: relative;
+  width: 100%;
 }
 
 .input {
+  font-size: 20px;
   padding: 5px;
+  margin: 20px;
+  width: 100%;
+}
+
+.genres {
+  flex-direction: row;
+}
+
+.heading4 {
+  margin: 0;
+}
+
+.subHeading {
+  margin: 0;
+  font-size: 14px;
 }
