Refactor components to fix styles

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -12,13 +12,7 @@
   width: 500px;
 }
 
-.imageAndTitle {
-  display: 'flex';
-  align-items: 'flex-end';
-  width: '100%';
-}
-
-.showsContainer {
+.layout5Grid {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 10px;
