--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -20,3 +20,24 @@
   row-gap: 20px;
   width: 100%;
 }
+
+.imageContainer {
+  border-radius: 5px;
+  position: relative;
+  overflow: hidden;
+}
+
+.smallImageContainer {
+  width: 80px;
+  height: 100px;
+}
+
+.normalImageContainer {
+  width: 120px;
+  height: 140px;
+}
+
+.largeImageContainer {
+  width: 160px;
+  height: 180px;
+}
