--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -23,14 +23,7 @@
 }
 
 .show {
-  width: 100%;
-  max-height: 100%;
-}
-
-.imageContainer {
-  margin-bottom: 10px;
-  position: relative;
-  width: 100%;
+  margin-bottom: 20px;
 }
 
 .input {
@@ -46,9 +39,12 @@
 
 .heading4 {
   margin: 0;
+  margin-top: 10px;
+  margin-bottom: 5px;
 }
 
 .subHeading {
   margin: 0;
   font-size: 14px;
+  color: #3b3a3a;
 }
