--- a/styles/Show.module.css
+++ b/styles/Show.module.css
@@ -1,8 +1,13 @@
 .imageAndTitle {
-  display: flex;
   align-items: flex-end;
-  width: 100%;
+  display: flex;
   flex-direction: row;
-  margin-top: 20px;
   margin-bottom: 20px;
+  width: 100%;
+}
+
+.title {
+  margin: 0;
+  margin-right: 20px;
+  margin-left: 20px;
 }
